feat: eGovFrame 기반의 도메인, 서비스, 보안 계층 구조를 추가하고 불필요한 임시 파일을 정리하며 문서 및 Docker 설정을 업데이트했습니다.